slots777win/webclient-deployment-slots777.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: de-webclient-slots777
  namespace: slots777win
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: de-webclient-slots777
  template:
    metadata:
      labels:
        app: de-webclient-slots777
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        command: ["/bin/sh"]
        args: ["-c", "while true; do echo hello; sleep 10;done"]
        ports:
        - containerPort: 80
