slots777win/webclient-svc-slots777.yaml
apiVersion: v1
kind: Service
metadata:
  name: de-webclient-slots777
  namespace: slots777win
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http-webclient
  selector:
    app: de-webclient-slots777
