slots777win/vs-webclient-slots777.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: de-webclient-slots777
  namespace: slots777win
spec:
  hosts:
  - www.slots777.win
  - slots777.win
  gateways:
  - de-gw-slots777
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: de-webclient-slots777
